<resources>
    <string name="app_name">Employees</string>
    <string name="title_activity_employee_details">EmployeeDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="salary_label">salary :</string>
    <string name="employee_name_example">Tiger Nixon</string>
    <string name="age_label">age :</string>
    <string name="salary_example">5200</string>
    <string name="age_example">20</string>
    <string name="retry_button_text">Retry</string>
</resources>
