<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EmployeeDetailsActivity">

    <TextView
        android:id="@+id/employee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/employee_name_example"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/salary_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/salary_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#131212"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/employee_name"
        app:layout_constraintTop_toBottomOf="@+id/employee_name" />

    <TextView
        android:id="@+id/employee_salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/salary_example"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#191818"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/salary_label"
        app:layout_constraintStart_toEndOf="@+id/salary_label" />

    <TextView
        android:id="@+id/age_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#131212"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/employee_name"
        app:layout_constraintTop_toBottomOf="@+id/salary_label"
        tools:text="@string/age_label" />

    <TextView
        android:id="@+id/employee_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_example"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#090808"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/age_label"
        app:layout_constraintEnd_toEndOf="@+id/employee_salary"
        app:layout_constraintStart_toStartOf="@+id/employee_salary" />
</androidx.constraintlayout.widget.ConstraintLayout>